# bardic

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: benches.rs
src/: entity.rs  id.rs  lib.rs  table.rs  text.rs
